--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "bugs": {
     "url": "https://github.com/ksnyde/broccoli-docco/issues"
   },
-  "homepage": "https://github.com/ksnyde/broccoli-docco"
+  "homepage": "https://github.com/ksnyde/broccoli-docco",
+  "dependencies": {
+    "broccoli-writer": "^0.1.1",
+    "docco": "^0.6.3",
+    "rsvp": "^3.0.9"
+  }
 }
-
