--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "broccoli-docco",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A broccoli plugin that generates HTML code documentation using the popular [docco](http://jashkenas.github.io/docco/) library.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "broccoli build temp && mocha"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:ksnyde/broccoli-docco.git"
   },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "broccoli",
     "broccoli-plugin"
@@ -21,8 +24,16 @@
   },
   "homepage": "https://github.com/ksnyde/broccoli-docco",
   "dependencies": {
-    "broccoli-writer": "^0.1.1",
+    "broccoli-filter": "^0.1.1",
     "docco": "^0.6.3",
     "rsvp": "^3.0.9"
+  },
+  "devDependencies": {
+    "broccoli": "^0.12.3",
+    "broccoli-static-compiler": "^0.1.4",
+    "chai": "^1.9.1",
+    "chalk": "^0.5.1",
+    "mocha": "^1.20.1",
+    "rimraf": "^2.2.8"
   }
 }
