--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "broccoli": "^0.12.3",
+    "broccoli-merge-trees": "^0.1.4",
     "broccoli-static-compiler": "^0.1.4",
     "chai": "^1.9.1",
     "jshint": "^2.5.2",
